tests/warn/param-opt.jo
param newLine: Bool = 3  // error

def printOpt(s: String): Unit =
  print s
  if newLine then print "\n"

def main =
  printOpt "hello "
  with newLine = true in printOpt "world!"
